# dictation_player

./: index.html  package.json  pnpm-lock.yaml  vite.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: DictationPlayer.vue  Entry.vue  Pony1.vue  ReviewCard.vue
src/pages/: Config.vue  Home.vue  Local.vue  Resources.vue  Review.vue  Wrapper.vue
src/router/: index.js  routes.js
src/store/: config.js  entry.js  index.js
src/utils/: appInitialization.js  parseSrt.js  resourcesManager.js  timeTools.js
